--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ body,
   height: 100%;
   overflow: hidden;
   background: #000;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 canvas {
